cigna-gitops/apps/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cigna-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx

  rules:
    - host: prod.cigna.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cigna-nginx-service
                port:
                  number: 80

  tls:
    - hosts:
        - prod.cigna.local
      secretName: cigna-tls
